--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Price.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Price.cshtml
@@ -259,6 +259,7 @@
 					.Width(120);
 				columns.Bound(x => x.Price1)
 					.Format("{0:0.00}")
+					.Width(120)
 					.RightAlign();
 				columns.Bound(x => x.Store);
 				columns.Bound(x => x.CustomerRole);
