--- a/src/Presentation/SmartStore.Web/Views/Product/_Attributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/_Attributes.cshtml
@@ -40,8 +40,12 @@
                     <select name="@(controlId)" id="@(controlId)" style="width:100%"@(Html.Raw(disabled))>
                         @if (!attribute.IsRequired)
                         {
-                            <option value="0">---</option>
-                        }
+                            <option value="0">@T("Common.Unspecified")</option>
+						}
+						else if (attribute.Values.Count > 0 && !attribute.Values.Any(x => x.IsPreSelected))
+						{
+							<option value="0">@T("Common.PleaseSelect")</option>
+						}
                         @foreach (var pvaValue in attribute.Values)
                         {
                             <option value="@pvaValue.Id" @Html.Attr("selected", "selected", pvaValue.IsPreSelected) @Html.Attr("data-imageurl", pvaValue.ImageUrl, pvaValue.ImageUrl.HasValue())>@(pvaValue.Name)@(pvaValue.GetAttributeValueInfo())</option>
