--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/pages.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/pages.less
@@ -119,6 +119,9 @@
 .news-items .view-all {
 	font-weight: bold;
 }
+.news-item-page .news-content {
+	margin-bottom: 12px
+}
 
 /* Poll & Vote Styles
 ================================================ */
