--- a/src/Presentation/SmartStore.Web/Views/News/NewsItem.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/News/NewsItem.cshtml
@@ -28,6 +28,9 @@
         <div class="news-content">
             @Html.Raw(Model.Full)
         </div>
+
+		<div class="clear"></div>
+
         @Html.Widget("newsitem_page_before_comments")
 
         @if (Model.AllowComments)
