Minor css change

--- a/src/Presentation/SmartStore.Web/Views/News/NewsItem.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/News/NewsItem.cshtml
@@ -25,7 +25,7 @@
 
     <div class="news-body">
         @Html.Widget("newsitem_page_before_body")
-        <div class="news-content">
+        <div class="news-content clearfix">
             @Html.Raw(Model.Full)
         </div>
 
