Fixed: If currencies are limited to one for a multi-store, this currency should dominate the setting for the primary store currency

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminLayout.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminLayout.cshtml
@@ -6,6 +6,8 @@
 @using SmartStore.Core.Domain.Localization;
 @using SmartStore;
 
+@* Please keep in mind that this layout view is also referenced and used by plugins! *@
+
 @{
 	Layout = "~/Administration/Views/Shared/_AdminRoot.cshtml";	
 } 
