Editing of payment method restrictions

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1197,6 +1197,29 @@ table.payment-method-features td {
 	font-size: 12px;
 }
 
+/* payment methods restrictions
+-------------------------------------------------------------- */
+.payment-restrictions th label {
+	margin: 0;
+}
+.payment-restrictions .column-customerroles,
+.payment-restrictions .column-shippingmethods {
+	width: 18%;
+}
+.payment-restrictions .column-countries {
+	width: 64%;
+
+	> div {
+		display: table-row;
+	}
+
+	.country-countainer {
+		display: table-cell;
+		width: 25%;
+		padding-right: 10px;
+	}
+}
+
 
 /* Special icons */
 .icon-active-true {
