Resolves #141 Shipping methods by customer roles

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1197,9 +1197,9 @@ table.payment-method-features td {
 	font-size: 12px;
 }
 
-/* payment methods restrictions
+/* payment and shipping restrictions
 -------------------------------------------------------------- */
-.payment-restrictions {
+.restriction-container {
 	th label {
 		margin: 0 10px 0 0;
 		display: inline-block;
@@ -1226,7 +1226,7 @@ table.payment-method-features td {
 			display: table-row;
 		}
 
-		.country-countainer {
+		.country-container {
 			display: table-cell;
 			width: 25%;
 			padding-right: 10px;
