--- a/src/Presentation/SmartStore.Web/Administration/Views/Shipping/_CreateOrUpdateMethod.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shipping/_CreateOrUpdateMethod.cshtml
@@ -15,52 +15,52 @@
 @helper TabGeneral()
 {
 	@(Html.LocalizedEditor<ShippingMethodModel, ShippingMethodLocalizedModel>("shipping-method-localized",
-		@<table class="adminContent">
-			<tr>
-				<td class="adminTitle">
-					@Html.SmartLabelFor(model => model.Locales[item].Name)
-				</td>
-				<td class="adminData">
-					@Html.EditorFor(model => Model.Locales[item].Name)
-					@Html.ValidationMessageFor(model => model.Locales[item].Name)
-				</td>
-			</tr>
-			<tr>
-				<td class="adminTitle">
-					@Html.SmartLabelFor(model => model.Locales[item].Description)
-				</td>
-				<td class="adminData">
-					@Html.TextAreaFor(model => model.Locales[item].Description)
-					@Html.ValidationMessageFor(model => model.Locales[item].Description)
-				</td>
-			</tr>
-			<tr>
-				<td colspan="2">
-					@Html.HiddenFor(model => model.Locales[item].LanguageId)
-				</td>
-			</tr>
-		</table>
-		,
-		@<table class="adminContent">
-			<tr>
-				<td class="adminTitle">
-					@Html.SmartLabelFor(model => model.Name)
-				</td>
-				<td class="adminData">
-					@Html.EditorFor(model => model.Name)
-					@Html.ValidationMessageFor(model => model.Name)
-				</td>
-			</tr>
-			<tr>
-				<td class="adminTitle">
-					@Html.SmartLabelFor(model => model.Description)
-				</td>
-				<td class="adminData">
-					@Html.TextAreaFor(model => model.Description)
-					@Html.ValidationMessageFor(model => model.Description)
-				</td>
-			</tr>
-		</table>
+	@<table class="adminContent">
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.Locales[item].Name)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => Model.Locales[item].Name)
+				@Html.ValidationMessageFor(model => model.Locales[item].Name)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.Locales[item].Description)
+			</td>
+			<td class="adminData">
+				@Html.TextAreaFor(model => model.Locales[item].Description)
+				@Html.ValidationMessageFor(model => model.Locales[item].Description)
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				@Html.HiddenFor(model => model.Locales[item].LanguageId)
+			</td>
+		</tr>
+	</table>
+	,
+	@<table class="adminContent">
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.Name)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => model.Name)
+				@Html.ValidationMessageFor(model => model.Name)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.Description)
+			</td>
+			<td class="adminData">
+				@Html.TextAreaFor(model => model.Description)
+				@Html.ValidationMessageFor(model => model.Description)
+			</td>
+		</tr>
+	</table>
 	))
 
 	<table class="adminContent">
@@ -91,50 +91,39 @@
 		@Html.Raw(T("Admin.Configuration.Shipping.Methods.RestrictionNote"))
 	</div>
 
-	<div class="restriction-container">
-		<table class="table">
+	<div>
+		<table class="adminContent">
 			<tr>
-				<th>
-					<div class="checkbox">
-						<label>
-							<input type="checkbox" id="MasterCustomerRole" name="MasterCustomerRole" value="" />
-							@T("Admin.Customers.CustomerRoles")
-						</label>
-					</div>
-				</th>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.ExcludedCustomerRoleIds)
+				</td>
+				<td class="adminData">
+					@Html.ListBoxFor(model => model.ExcludedCustomerRoleIds,
+						new MultiSelectList(Model.AvailableCustomerRoles, "Value", "Text"),
+						new { multiple = "multiple", @class = "control-xlarge" })
+					@Html.ValidationMessageFor(model => model.ExcludedCustomerRoleIds)
+				</td>
 			</tr>
 			<tr>
-				<td class="column-customerroles">
-					@foreach (var item in Model.AvailableCustomerRoles)
-					{
-						@RenderCheckbox(item, "CustomerRole_")
-					}
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.ExcludedCountryIds)
+				</td>
+				<td class="adminData">
+					@Html.ListBoxFor(model => model.ExcludedCountryIds,
+						new MultiSelectList(Model.AvailableCountries, "Value", "Text"),
+						new { multiple = "multiple", @class = "control-xlarge" })
+					@Html.ValidationMessageFor(model => model.ExcludedCountryIds)
+				</td>
+			</tr>
+			<tr>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.CountryExclusionContext)
+				</td>
+				<td class="adminData">
+					@Html.DropDownListFor(model => model.CountryExclusionContext, Model.AvailableCountryExclusionContextTypes)
+					@Html.ValidationMessageFor(model => model.CountryExclusionContext)
 				</td>
 			</tr>
 		</table>
 	</div>
 }
-
-@helper RenderCheckbox(SelectListItem item, string prefix)
-{
-	<div class="checkbox">
-		<label>
-			<input type="checkbox" id="@(prefix)@(item.Value)" name="@(prefix)@(item.Value)" value="@item.Value" @(item.Selected ? "checked='checked'" : "") />
-			@item.Text
-		</label>
-	</div>
-}
-
-<script type="text/javascript">
-	jQuery(document).ready(function () {
-
-		// restictions column header checkbox clicked
-		$('.restriction-container th input[type="checkbox"]').change(function () {
-			var id = $(this).attr('id').replace('Master', ''),
-				isChecked = $(this).is(':checked');
-
-			$('.restriction-container td input[name^="' + id + '"]').attr('checked', isChecked);
-		});
-
-	});
-</script>
